Add persistence layer